Made Tyrant Pathway's abilities use async schedulers